fix cardDescription mobile design

--- a/styles/breakpoints/_600up.scss
+++ b/styles/breakpoints/_600up.scss
@@ -92,3 +92,13 @@
     }
   }
 }
+
+.cardDescription {
+  &__modal {
+    flex-direction: row;
+    width: 800px;
+  }
+  &__imageWrapper {
+    width: 200px;
+  }
+}
